--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -8,4 +8,4 @@
           on {{ ansible_facts.distribution }} {{ ansible_facts.distribution_version }}
 
     - import_role:
-        name: ansible-role-{{ cookiecutter.setup_name }}
+        name: ansible-role-dedcon
